# clube-back

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
back/: Dockerfile  app.py  pyproject.toml  pytest.ini  run.py  test.sh
back/api/: __init__.py
back/app/: __init__.py  config.py
back/app/api/: __init__.py
back/app/api/auth/: models.py  services.py  views.py
back/app/api/auth/tests/: conftest.py  test_auth_endpoints.py
back/app/api/tasks/: models.py  services.py  views.py
back/app/api/tasks/tests/: conftest.py  test_task_endpoints.py
back/app/api/users/: models.py  views.py
back/app/api/users/tests/: conftest.py  test_user_endpoints.py
back/app/domain/models/: task.py
back/app/infrastructure/database/: init.py  mongodb.py
back/app/infrastructure/redis/: init.py  rediscache.py
back/app/infrastructure/repositories/: task_repository.py
back/app/lib/: tasks.py
back/app/lib/database/: init.py
back/app/lib/redis/: init.py
back/tests/api/tasks/: test_task_endpoints.py
front/: Dockerfile  Dockerfile.prod  README.md  app.vue  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
front/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
front/.nuxt/dev/: index.mjs  index.mjs.map
front/.nuxt/manifest/: latest.json
front/.nuxt/manifest/meta/: dev.json
front/.nuxt/types/: build.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts
front/src/: App.vue  main.ts
front/src/client/: api.ts  auth.ts  index.ts  tasks.ts
front/src/components/: LoginForm.vue  RegisterForm.vue  ResetPasswordForm.vue  TaskCard.vue  TaskColumn.vue  TaskForm.vue  index.ts
front/src/composables/: index.ts  useDragDrop.ts  useScreenSize.ts
front/src/router/: index.ts
front/src/stores/: auth.ts  index.ts  tasks.ts
front/src/types/: index.ts
front/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue  ResetPasswordConfirmView.vue  ResetPasswordView.vue  TasksView.vue  index.ts
